--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GaFyGcXAOw6QaQrDelhc/UjisNED7ozRZ3lASUCkCn8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -14,12 +14,12 @@ LOG_LEVEL=debug
 
 #Postgresql
 DB_CONNECTION=pgsql
-DB_HOST=pgsql
+DB_HOST=localhost
 DB_PORT=5432
 
 DB_DATABASE=bookworm_app
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=postgres
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
