--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
         "axios": "^0.21",
-        "bootstrap": "^5.0.2",
+        "bootstrap": "^4.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "react": "^17.0.2",
-        "react-bootstrap": "^1.6.1",
+        "react-bootstrap": "^1.6.5",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
+        "react-router-dom": "^6.3.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0"
