--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "laravel-mix": "^6.0.6",
@@ -22,6 +27,7 @@
         "react-router-dom": "^6.3.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
-        "sass-loader": "^12.1.0"
+        "sass-loader": "^12.1.0",
+        "swiper": "^8.2.4"
     }
 }
