--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.5",
         "react-dom": "^17.0.2",
+        "react-js-pagination": "^3.0.3",
         "react-redux": "^7.2.4",
         "react-router-dom": "^6.3.0",
         "resolve-url-loader": "^4.0.0",
