--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/react-fontawesome": "^0.1.18",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
+        "formik": "^2.2.9",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "react": "^17.0.2",
@@ -26,9 +27,11 @@
         "react-js-pagination": "^3.0.3",
         "react-redux": "^7.2.4",
         "react-router-dom": "^6.3.0",
+        "react-select": "^5.3.2",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
-        "swiper": "^8.2.4"
+        "swiper": "^8.2.4",
+        "yup": "^0.32.11"
     }
 }
