--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "formik": "^2.2.9",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.5",
         "react-dom": "^17.0.2",
