--- a/.env
+++ b/.env
@@ -55,4 +55,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-BASE_URL="http://127.0.0.1:8000/api"
+MIX_APP_URL=/api
