--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
         "react-bootstrap": "^1.6.5",
         "react-dom": "^17.0.2",
         "react-js-pagination": "^3.0.3",
-        "react-redux": "^7.2.4",
+        "react-redux": "^7.2.8",
         "react-router-dom": "^6.3.0",
         "react-select": "^5.3.2",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "swiper": "^8.2.4",
         "yup": "^0.32.11"
-    }
+    },
+    "proxy": "http://127.0.0.1:8000"
 }
