--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "query-string": "^7.1.1",
-        "react": "^17.0.2",
+        "react": "^18.2.0",
         "react-bootstrap": "^1.6.5",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
         "react-js-pagination": "^3.0.3",
         "react-redux": "^7.2.8",
         "react-router-dom": "^6.3.0",
