--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "formik": "^2.2.9",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "moment": "^2.29.3",
         "query-string": "^7.1.1",
         "react": "^18.2.0",
         "react-bootstrap": "^1.6.5",
