--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
         "swiper": "^8.2.4",
         "yup": "^0.32.11"
     },
-    "proxy": "http://127.0.0.1:8000"
+    "proxy": "http://127.0.0.1:8000",
+    "dependencies": {
+        "@hookform/resolvers": "^2.9.3",
+        "bcryptjs": "^2.4.3",
+        "crypto-js": "^4.1.1",
+        "notiflix": "^3.2.5",
+        "react-hook-form": "^7.33.1",
+        "sweetalert2": "^11.4.19"
+    }
 }
