--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     },
     "proxy": "http://127.0.0.1:8000",
     "dependencies": {
+        "@dicebear/avatars": "^4.10.3",
+        "@dicebear/micah": "^4.10.3",
         "@hookform/resolvers": "^2.9.3",
         "bcryptjs": "^2.4.3",
         "crypto-js": "^4.1.1",
         "notiflix": "^3.2.5",
         "react-hook-form": "^7.33.1",
+        "react-show-more-text": "^1.5.2",
+        "react-text-truncate": "^0.19.0",
         "sweetalert2": "^11.4.19"
     }
 }
