--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "bcryptjs": "^2.4.3",
         "crypto-js": "^4.1.1",
         "notiflix": "^3.2.5",
+        "react-helmet": "^6.1.0",
         "react-hook-form": "^7.33.1",
         "react-show-more-text": "^1.5.2",
         "react-text-truncate": "^0.19.0",
